--- a/crud-springboot/src/main/resources/templates/Formulario.html
+++ b/crud-springboot/src/main/resources/templates/Formulario.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
 </head>
 <body>
 
@@ -16,6 +17,15 @@ Time: <input type="text" name="time">
 
 
 </form>
+
+
+<script src="/js/bootstrap.min.js"> </script>
+
+
+
+
+
+
 
 </body>
 </html>
