--- a/crud-springboot-1/src/main/resources/templates/PaginaListagem.html
+++ b/crud-springboot-1/src/main/resources/templates/PaginaListagem.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
-
 </head>
 <body>
+
 
 
 	<table class="table">
@@ -15,25 +15,29 @@
 				<th scope="col">Codigo</th>
 				<th scope="col">Nome</th>
 				<th scope="col">Time</th>
+				<th scope="col">Data de Nascimento</th>
 			</tr>
 		</thead>
 		<tbody>
-			<tr th:each = "pessoa: ${listaPessoas}">
+			<tr th:each = "pessoa : ${listaDePessoas}">
 				<td th:text="${pessoa.codigo}"></td>
 				<td th:text="${pessoa.nome}"></td>
 				<td th:text="${pessoa.time}"></td>
 				<td th:text="${{pessoa.dataNascimento}}"></td>
-				<td> <a th:href = "@{/pessoa/excluir/{codigo}(codigo = ${pessoa.codigo})}"><button type="button" class="btn btn-danger">Excluir</button> </a> </td>
-				<td> <a th:href = "@{/pessoa/atualizar/{codigo}(codigo = ${pessoa.codigo})}"><button type="button" class="btn btn-primary">Atualizar</button> </a> </td>
+				<td> <a th:href="@{/pessoa/excluir/{codigo}(codigo = ${pessoa.codigo})}"> <button type="button" class="btn btn-danger">Excluir</button></a></td>
+				<td> <a class="btn btn-primary" th:href="@{/pessoa/atualizar/{codigo}(codigo = ${pessoa.codigo})}"> Atualizar </a></td>
 			</tr>
+			
 		</tbody>
 	</table>
 
 
 
+	<script src="/js/bootstrap.min.js"> </script>
 
 
-	<script src="/js/bootstrap.min.js">  </script>
+
+
 
 </body>
 </html>
