--- a/spring-boot-crud/src/main/resources/templates/OlaMundo.html
+++ b/spring-boot-crud/src/main/resources/templates/OlaMundo.html
@@ -3,10 +3,20 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
+
 </head>
 <body>
 
-Ola Mundo
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="/olamundo">Página Inicial</a>
+  <a class="navbar-brand" href="/pessoa/listar">Página de Listagem</a>
+  <a class="navbar-brand" href="/pessoa/formulario"> Cadastre-se</a>
+</nav>
+
+
+
+	<script src="/js/bootstrap.min.js">  </script>
 
 </body>
 </html>
