--- a/crud-springboot-1/src/main/resources/templates/Formulario.html
+++ b/crud-springboot-1/src/main/resources/templates/Formulario.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
 
-	<form action="/pessoa/salvar" method="POST">
-		Nome: <input type="text" name="nome"> <br>
-		Time: <input type="text" name="time"> <br>
+	<form action="/pessoa/salvar" method="POST" th:object="${pessoa}">
+		<input type="hidden" th:field="*{codigo}" />
+		Nome: <input type="text" th:field="*{nome}"> <br>
+		Time: <input type="text" th:field="*{time}"> <br>
+		Data Nascimento: <input type="text" th:field="*{dataNascimento}"> <br>
 		<input type="submit" value="Cadastrar">
+		
+
 		
 
 	</form>
