--- a/crud-springboot/src/main/resources/templates/PaginaListagem.html
+++ b/crud-springboot/src/main/resources/templates/PaginaListagem.html
@@ -23,7 +23,7 @@
 				<td th:text="${pessoa.nome}"></td>
 				<td th:text="${pessoa.time}"></td>
 				<td> <a th:href="@{/pessoa/excluir/{codigo}(codigo = ${pessoa.codigo})}"> <button type="button" class="btn btn-danger">  Excluir </button> </a></td>
-				<td> </td>
+				<td> <a th:href="@{/pessoa/atualizar/{codigo}(codigo = ${pessoa.codigo})}"> <button type="button" class="btn btn-primary">Atualizar</button> </a> </td>
 			</tr>
 
 		</tbody>
