--- a/crud-springboot/src/main/resources/templates/Formulario.html
+++ b/crud-springboot/src/main/resources/templates/Formulario.html
@@ -8,11 +8,13 @@
 <body>
 
 
-<form action="/pessoa/salvar" method="post" th:object="${pessoa}">
+<form action="/pessoa/salvar" method="post" th:object="${pessoa}" enctype="multipart/form-data">
 <input type="hidden" th:field="*{codigo}">
 
 Nome: <input type="text" th:field="*{nome}"> <br>
-Time: <input type="text" th:field="*{time}">
+Time: <input type="text" th:field="*{time}"> <br>
+Imagem: <input type="file" name="imagem"> <br>
+Data de Nascimento <input type="text" th:field="*{dataNascimento}"> <br>
 
 <input type="submit" value="Cadastrar">
 
