--- a/crud-springboot/src/main/resources/templates/PaginaListagem.html
+++ b/crud-springboot/src/main/resources/templates/PaginaListagem.html
@@ -22,8 +22,10 @@
 				<td th:text="${pessoa.codigo}"></td>
 				<td th:text="${pessoa.nome}"></td>
 				<td th:text="${pessoa.time}"></td>
+				<td th:text="${{pessoa.dataNascimento}}"></td>
 				<td> <a th:href="@{/pessoa/excluir/{codigo}(codigo = ${pessoa.codigo})}"> <button type="button" class="btn btn-danger">  Excluir </button> </a></td>
 				<td> <a th:href="@{/pessoa/atualizar/{codigo}(codigo = ${pessoa.codigo})}"> <button type="button" class="btn btn-primary">Atualizar</button> </a> </td>
+				<td> <img width="200" height="200" th:src="@{'/images/'+${pessoa.nome}+.png}"/> </td>
 			</tr>
 
 		</tbody>
@@ -35,7 +37,7 @@
 
 
 
-<a href="/pessoa/formulario"><button> CLique</button></a>
+<a href="/pessoa/formulario"><button> Ir para Formulario</button></a>
 
 	<script src="/js/bootstrap.min.js"> </script>
 
