--- a/spring-boot-crud/src/main/resources/templates/Formulario.html
+++ b/spring-boot-crud/src/main/resources/templates/Formulario.html
@@ -10,16 +10,15 @@
 	<body>
 
 
-	<form action="/pessoa/cadastrar" method="POST" th:object="${pessoa}">
+	<form action="/pessoa/cadastrar" method="POST" enctype="multipart/form-data" th:object="${pessoa}">
 	<input type="hidden" th:field="*{codigo}">
 	
-		<div class="alert alert-success" role="alert" th:if="${!#strings.isEmpty(mensagem)}">
-  			<span th:text="${mensagem}"> Teste </span>
-		</div>
+		
 	
 		Nome: <input type="text" th:field="*{nome}"> <br>
 		Time: <input type="text" th:field="*{time}"> <br>
 		Data de Nascimento <input type="text" th:field="*{dataNascimento}"> <br>
+		Imagem: <input type="file" name="imagem"> <br>
 		
 		<input type="submit" value="Cadastrar">
 	
