--- a/spring-boot-crud/src/main/resources/templates/Pagina-Listagem.html
+++ b/spring-boot-crud/src/main/resources/templates/Pagina-Listagem.html
@@ -25,6 +25,7 @@
 				<td th:text="${{pessoa.dataNascimento}}"></td>
 				<td> <a th:href = "@{/pessoa/excluir/{codigo}(codigo = ${pessoa.codigo})}"><button type="button" class="btn btn-danger">Excluir</button> </a> </td>
 				<td> <a th:href = "@{/pessoa/atualizar/{codigo}(codigo = ${pessoa.codigo})}"><button type="button" class="btn btn-primary">Atualizar</button> </a> </td>
+				<td> <img width="200" height="200" alt="" th:src="@{'/images/'+${pessoa.nome}+.png}"/> </td>
 			</tr>
 		</tbody>
 	</table>
