Upload imagem na turma de manha

--- a/crud-springboot-1/src/main/resources/templates/PaginaListagem.html
+++ b/crud-springboot-1/src/main/resources/templates/PaginaListagem.html
@@ -26,6 +26,7 @@
 				<td th:text="${{pessoa.dataNascimento}}"></td>
 				<td> <a th:href="@{/pessoa/excluir/{codigo}(codigo = ${pessoa.codigo})}"> <button type="button" class="btn btn-danger">Excluir</button></a></td>
 				<td> <a class="btn btn-primary" th:href="@{/pessoa/atualizar/{codigo}(codigo = ${pessoa.codigo})}"> Atualizar </a></td>
+				<td> <img width="200" height="200" th:src="@{'/images/'+${pessoa.nome}+.png}"> </td>
 			</tr>
 			
 		</tbody>
