--- a/spring-boot-crud/src/main/resources/templates/Formulario.html
+++ b/spring-boot-crud/src/main/resources/templates/Formulario.html
@@ -7,28 +7,44 @@
 <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
 
 </head>
-	<body>
+<body>
 
 
-	<form action="/pessoa/cadastrar" method="POST" enctype="multipart/form-data" th:object="${pessoa}">
-	<input type="hidden" th:field="*{codigo}">
-	
-		
-	
+	<form action="/pessoa/cadastrar" method="POST"
+		enctype="multipart/form-data" th:object="${pessoa}">
+		<input type="hidden" th:field="*{codigo}">
+
+
+		<div class="alert alert-success" role="alert"
+			th:if="${!#strings.isEmpty(mensagem)}">
+			<span th:text="${mensagem}"></span>
+		</div>
+
+		<div class="alert alert-danger" th:if="${#fields.hasAnyErrors()}">
+			<div th:each="detailedError : ${#fields.detailedErrors()}">
+				<span th:text="${detailedError.message}"> </span>
+			</div>
+		</div>
+
 		Nome: <input type="text" th:field="*{nome}"> <br>
-		Time: <input type="text" th:field="*{time}"> <br>
-		Data de Nascimento <input type="text" th:field="*{dataNascimento}"> <br>
-		Imagem: <input type="file" name="imagem"> <br>
-		
-		<input type="submit" value="Cadastrar">
-	
-		
-	
-	
+
+		<!-- <div th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}" class="alert alert-danger">
+            <p>Name is invalid</p>
+            </div> -->
+
+		Time: <input type="text" th:field="*{time}"> <br> Data de
+		Nascimento <input type="text" th:field="*{dataNascimento}"> <br>
+
+		Imagem: <input type="file" name="imagem"> <br> <input
+			type="submit" value="Cadastrar">
+
+
+
+
 	</form>
 
 
-		<script src="/js/bootstrap.min.js">  </script>
+	<script src="/js/bootstrap.min.js">  </script>
 
-	</body>
+</body>
 </html>
