Validacao com bean validation para a turma de tarde

--- a/crud-springboot-1/src/main/resources/templates/Formulario.html
+++ b/crud-springboot-1/src/main/resources/templates/Formulario.html
@@ -3,13 +3,30 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+
 </head>
 <body>
 
 	<form action="/pessoa/salvar" method="POST" th:object="${pessoa}"
 		enctype="multipart/form-data">
 
+
+		<div class="alert alert-success" role="alert"
+			th:if="${!#strings.isEmpty(mensagem)}">
+			<span th:text="${mensagem}"></span>
+		</div>
 		
+		
+		<div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
+			<div th:each="detailedError : ${#fields.detailedErrors()}">
+				<span th:text="${detailedError.message}"></span>
+			
+		</div>
+		
+		
+		
+		</div>
 
 
 		<input type="hidden" th:field="*{codigo}" /> Nome: <input type="text"
@@ -19,10 +36,15 @@
 		sua foto: <input type="file" name="imagem"> <br> <input
 			type="submit" value="Cadastrar">
 
-
+		
+		
+		
 
 
 	</form>
+
+
+	<script src="/js/bootstrap.min.js"> </script>
 
 </body>
 </html>
