Validacao com bean validation

--- a/crud-springboot-2/src/main/resources/templates/Formulario.html
+++ b/crud-springboot-2/src/main/resources/templates/Formulario.html
@@ -3,24 +3,40 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+
 </head>
 <body>
 
 	<form action="/pessoa/salvar" method="POST" th:object="${pessoa}"
 		enctype="multipart/form-data">
-		
-		<div class="alert alert-success" role="alert" th:if="${!#strings.isEmpty(mensagem)}">
-		
-			<span th:text="${mensagem}"> sddssddfdffdfd</span>
-		
+
+		<div class="alert alert-success" role="alert"
+			th:if="${!#strings.isEmpty(mensagem)}">
+			<span th:text="${mensagem}"> </span>
+
 		</div>
+
+
+		<div class="alert alert-danger" role="alert" 
+		th:if="${#fields.hasAnyErrors()}">
+		
+			<div th:each="detailedError : ${#fields.detailedErrors()}">
+				<span th:text="${detailedError.message}"> </span>
+			</div>
+			
+	
+		</div>
+
+
 
 
 		<input type="hidden" th:field="*{codigo}"> Nome: <input
 			type="text" th:field="*{nome}"> <br> Time: <input
-			type="text" th:field="*{time}"> <br> Selecione uma
-		foto: <input type="file" name="imagem"> <input type="submit"
-			value="Cadastrar">
+			type="text" th:field="*{time}"> <br> Data Nascimento: <input
+			type="text" th:field="*{dataNascimento}"> <br> Selecione
+		uma foto: <input type="file" name="imagem"> <input
+			type="submit" value="Cadastrar">
 
 	</form>
 
