--- a/crud-springboot/src/main/resources/templates/Formulario.html
+++ b/crud-springboot/src/main/resources/templates/Formulario.html
@@ -33,9 +33,11 @@
 			<small id="nomeHelp" class="form-text text-muted">Digite seuv
 				verdadeiro nome</small>
 		</div>
-		Time: <input type="text" th:field="*{time}"> <br> Imagem:
-		<input type="file" name="imagem"> <br> Data de Nascimento
-		<input type="text" th:field="*{dataNascimento}"> <br> <input
+		Time: <input type="text" th:field="*{time}"> <br> 
+		
+		Imagem:	<input type="file" name="imagem"> <br> 
+		
+		Data de Nascimento <input type="text" th:field="*{dataNascimento}"> <br> <input
 			type="submit" value="Cadastrar">
 
 
