--- a/crud-springboot-1/src/main/resources/templates/Formulario.html
+++ b/crud-springboot-1/src/main/resources/templates/Formulario.html
@@ -33,8 +33,11 @@
 			th:field="*{nome}"> <br> Time: <input type="text"
 			th:field="*{time}"> <br> Data Nascimento: <input
 			type="text" th:field="*{dataNascimento}"> <br> Selecione
-		sua foto: <input type="file" name="imagem"> <br> <input
-			type="submit" value="Cadastrar">
+		sua foto: <input type="file" name="imagem"> <br> 
+		
+		Login: <input type="text" th:field="*{login}"> <br>
+		Senha: <input type="password" th:field="*{senha}"> <br>
+		<input type="submit" value="Cadastrar">
 
 		
 		
